--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -22,12 +22,13 @@ source-repository head
 library
   hs-source-dirs:
       src
-  default-extensions: OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings
   ghc-options: -Wall -Werror
   exposed-modules:
       Lib
   build-depends:
       base >= 4.9 && < 5
+    , protolude
     , aeson
     , servant-server
     , wai
@@ -38,10 +39,11 @@ executable hello-prometheus-haskell
   main-is: Main.hs
   hs-source-dirs:
       app
-  default-extensions: OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings
   ghc-options: -Wall -Werror
   build-depends:
       base >= 4.9 && < 5
+    , protolude
     , hello-prometheus-haskell
   default-language: Haskell2010
 
@@ -50,9 +52,10 @@ test-suite hello-prometheus-haskell-tests
   main-is: Spec.hs
   hs-source-dirs:
       test
-  default-extensions: OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings
   ghc-options: -Wall -Werror
   build-depends:
       base >= 4.9 && < 5
+    , protolude
     , hello-prometheus-haskell
   default-language: Haskell2010
