--- a/package.yaml
+++ b/package.yaml
@@ -9,10 +9,12 @@ category: Web
 
 ghc-options: -Wall -Werror
 default-extensions:
+  - NoImplicitPrelude
   - OverloadedStrings
 
 dependencies:
   - base >= 4.9 && < 5
+  - protolude
 
 library:
   source-dirs: src
