--- a/package.yaml
+++ b/package.yaml
@@ -27,13 +27,13 @@ library:
 executables:
   hello-prometheus-haskell:
     main: Main.hs
-    source-dirs: app
+    source-dirs: cmd
     dependencies:
       - hello-prometheus-haskell
 
 tests:
   hello-prometheus-haskell-tests:
     main: Spec.hs
-    source-dirs: test
+    source-dirs: tests
     dependencies:
       - hello-prometheus-haskell
