--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -58,4 +58,5 @@ test-suite hello-prometheus-haskell-tests
       base >= 4.9 && < 5
     , protolude
     , hello-prometheus-haskell
+    , tasty
   default-language: Haskell2010
