Basic Prometheus instrumentation

--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -35,6 +35,7 @@ library
     , servant-server
     , wai
     , wai-extra
+    , wai-middleware-prometheus
     , warp
   default-language: Haskell2010
 
