--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ library:
     - neat-interpolation
     - prometheus-client
     - prometheus-metrics-ghc
+    - random
     - servant-server
     - time
     - wai
