--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -36,6 +36,7 @@ library
     , bytestring
     , http-media
     , http-types
+    , logging-effect
     , neat-interpolation
     , prometheus-client
     , prometheus-metrics-ghc
@@ -46,6 +47,7 @@ library
     , wai-extra
     , wai-middleware-prometheus
     , warp
+    , wl-pprint-text
   default-language: Haskell2010
 
 executable hello-prometheus-haskell
