--- a/package.yaml
+++ b/package.yaml
@@ -11,6 +11,7 @@ ghc-options: -Wall -Werror
 default-extensions:
   - NoImplicitPrelude
   - OverloadedStrings
+  - RecordWildCards
 
 dependencies:
   - base >= 4.9 && < 5
