Add option parsing

--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -38,6 +38,7 @@ library
     , http-types
     , logging-effect
     , neat-interpolation
+    , optparse-applicative
     , prometheus-client
     , prometheus-metrics-ghc
     , random
