--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ library:
     - http-types
     - logging-effect
     - neat-interpolation
+    - optparse-applicative
     - prometheus-client
     - prometheus-metrics-ghc
     - random
