Move logging to different file
Get timestamped logs in servant handler

--- a/hello-prometheus-haskell.cabal
+++ b/hello-prometheus-haskell.cabal
@@ -29,6 +29,7 @@ library
       ContentTypes
       Instrument
       Lib
+      Logging
   build-depends:
       base >= 4.9 && < 5
     , protolude
