--- a/{{ cookiecutter.project_name }}/circle.yml
+++ b/{{ cookiecutter.project_name }}/circle.yml
@@ -17,3 +17,4 @@ test:
   override:
     - stack --no-terminal build --test
     - stack --no-terminal test
+    - ./scripts/hindent-everything && git diff --exit-code
