Parametrize Stack resolver & build image

--- a/{{ cookiecutter.project_name }}/Makefile
+++ b/{{ cookiecutter.project_name }}/Makefile
@@ -1,5 +1,6 @@
 .PHONY: check clean docs format image lint
 
+BUILD_IMAGE = fpco/stack-build:{{ cookiecutter.stack_resolver }}
 IMAGE_NAME := {{ cookiecutter.project_name }}
 IMAGE_TAG := $(shell ./scripts/image-tag)
 EXE_NAME := {{ cookiecutter.project_name }}
@@ -25,6 +26,7 @@ lint:
 image:
 	stack --docker build
 	./scripts/build-image \
+		$(BUILD_IMAGE) \
 		$(LINUX_BINARY_PATH)/bin/$(EXE_NAME) \
 		$(IMAGE_NAME) \
 		$(IMAGE_TAG)
