Log using withFDHandler
Introduces a new monad and natural monad transformer, setting the scene
for #8.

--- a/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-server/package.yaml
+++ b/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-server/package.yaml
@@ -23,9 +23,11 @@ library:
     - {{ cookiecutter.project_name}}-api
     - aeson
     - bytestring
+    - exceptions
     - http-media
     - http-types
     - logging-effect
+    - mtl
     - optparse-applicative
     - prometheus-client
     - prometheus-metrics-ghc
