servant-quickcheck tests

--- a/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-server/package.yaml
+++ b/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}-server/package.yaml
@@ -51,5 +51,10 @@ tests:
     main: Main.hs
     source-dirs: tests
     dependencies:
+      - {{ cookiecutter.project_name}}-api
       - {{ cookiecutter.project_name }}-server
+      - logging-effect
+      - QuickCheck
+      - servant-quickcheck
       - tasty
+      - tasty-hspec
